first working draft

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,25 @@
+@import "~bootstrap/scss/bootstrap";
+
+.color-0{
+  background: aqua;
+  color: yellow;
+}
+
+.color-1{
+  background: deepskyblue;
+  color: white;
+}
+
+.color-2{
+  background: lightseagreen;
+  color: yellow;
+}
+
+.color-3{
+  background: aqua;
+  color: yellow;
+}
+
 .App {
   text-align: center;
 }
