--- a/src/components/MainChatWin.scss
+++ b/src/components/MainChatWin.scss
@@ -1,19 +1,22 @@
 .main-chat-win {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 97%;
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 80% 20%;
   grid-template-areas:
           "list chat"
           "list controls";
+  border-radius: 24px;
+  z-index: 1000;
+  background: white;
 
   .users-list, .chat-area, .controls-area {
-    border: 1px solid blue;
   }
 
   .users-list {
     grid-area: list;
+    border-right: 4px double lightgray;
   }
 
   .chat-area {
@@ -23,5 +26,6 @@
 
   .controls-area {
     grid-area: controls;
+    border-top: 4px double lightgray;
   }
 }
